# PriceOracle

./: .dockerignore  .env.example  README.md
infrastructure/: docker-compose.yml  init.sql
services/api/: Cargo.toml  Dockerfile
services/api/crates/http/: Cargo.toml  config.toml
services/api/crates/http/src/: config.rs  main.rs  utils.rs
services/api/crates/http/src/service/: mod.rs
services/api/src/: db.rs  error.rs  lib.rs  logger.rs  main.rs
workers/: Dockerfile.cron  Dockerfile.main  cron.js  main.js  package-lock.json  package.json
workers/cli/: jobs.js
workers/config/: index.js
workers/const/: index.js
workers/crawlers/: reuters.worker.js  vcb.worker.js  xe.worker.js  yahoo.worker.js
workers/importers/: reuters.importer.js  vcb.importer.js  xe.importer.js  yahoo.importer.js
workers/scripts/: replace-console-log.js
workers/utils/: logger.js
